--- a/index.mustache
+++ b/index.mustache
@@ -41,9 +41,9 @@
       <ul>
         <li><a href="https://dribbble.com/hail2u">Dribbble</a></li>
         <li><a href="https://github.com/hail2u">GitHub</a></li>
-        <li><a href="http://instagram.com/hail2u_">Instagram</a></li>
+        <li><a href="https://instagram.com/hail2u_">Instagram</a></li>
         <li><a href="https://pinboard.in/u:hail2u/">Pinboard</a></li>
-        <li><a href="http://www.pinterest.com/hail2u/">Pinterest</a></li>
+        <li><a href="https://www.pinterest.com/hail2u/">Pinterest</a></li>
         <li><a href="https://www.readability.com/hail2u/">Readability</a></li>
         <li><a href="https://soundcloud.com/hail2u_">SoundCloud</a></li>
         <li><a href="https://vimeo.com/hail2u">Vimeo</a></li>
@@ -51,7 +51,7 @@
     </section>
 
     <footer>
-      <p>Collected by <a href="http://hail2u.net/about/">Kyo Nagashima</a>.</p>
+      <p>Collected by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
     </footer>
   </body>
 </html>
