--- a/index.mustache
+++ b/index.mustache
@@ -42,9 +42,9 @@
         <li><a href="https://dribbble.com/hail2u">Dribbble</a></li>
         <li><a href="https://github.com/hail2u">GitHub</a></li>
         <li><a href="https://instagram.com/hail2u_">Instagram</a></li>
+        <li><a href="https://instapaper.com/p/hail2u">Instapaper</a></li>
         <li><a href="https://pinboard.in/u:hail2u/">Pinboard</a></li>
         <li><a href="https://www.pinterest.com/hail2u/">Pinterest</a></li>
-        <li><a href="https://www.readability.com/hail2u/">Readability</a></li>
         <li><a href="https://soundcloud.com/hail2u_">SoundCloud</a></li>
         <li><a href="https://vimeo.com/hail2u">Vimeo</a></li>
       </ul>
