--- a/src/index.mustache
+++ b/src/index.mustache
@@ -51,7 +51,7 @@
     </section>
 
     <footer>
-      <p>Collected by <a href="https://kyonagashima.com/">Kyo Nagashima</a>.</p>
+      <p><a href="https://kyonagashima.com/">Kyo Nagashima</a></p>
     </footer>
   </body>
 </html>
