--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   line-height: 1.6;
   color: #999;
   background-color: #fff;
-  font-family: "Helvetica Neue", "Calibri", sans-serif;
+  font-family: --apple-system, "Segoe UI", sans-serif;
 }
 
 a {
@@ -23,14 +23,6 @@ footer {
 header {
   position: relative;
   white-space: nowrap;
-}
-
-header h1,
-.bookmarks li time,
-.archives h2,
-.sources h2,
-footer:before {
-  font-family: "Hoefler Text", "Constantia", serif;
 }
 
 header h1,
